--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,27 @@
 spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          pipedrive:
+            provider: pipedrive
+            client-id: 00d721245188575d
+            client-secret: 42f2809571ae9e48f0b6397903e06b95731549b6
+            authorization-grant-type: authorization_code
+            redirect-uri: "https://3812-95-79-121-86.ngrok-free.app/login/oauth2/code/{registrationId}"
+        provider:
+          pipedrive:
+            authorization-uri: https://oauth.pipedrive.com/oauth/authorize
+            token-uri: https://oauth.pipedrive.com/oauth/token
+            user-info-uri: https://api.pipedrive.com/v1/users/me
+            user-name-attribute: data
+            nested-user-name-attribute: id
+            nested-client-id-attribute: company_id
+            nested-client-url-attribute: api_domain
+    jwt:
+      user-name-attribute: userId
+      header: Authorization
+      prefix: Bearer
   jpa:
     generate-ddl: true
   datasource:
