--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,7 @@
 	<description>DocSpace integration into Pipedrive</description>
 	<properties>
 		<java.version>21</java.version>
+		<checkstyle.header.file>${basedir}/onlyoffice.header</checkstyle.header.file>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -112,6 +113,27 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.3.0</version>
+				<configuration>
+					<configLocation>checkstyle.xml</configLocation>
+					<failsOnError>true</failsOnError>
+					<failOnViolation>true</failOnViolation>
+					<logViolationsToConsole>true</logViolationsToConsole>
+					<violationSeverity>warning</violationSeverity>
+					<consoleOutput>true</consoleOutput>
+					<includeTestSourceDirectory>true</includeTestSourceDirectory>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
