--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,15 @@ services:
     image: onlyoffice/pipedrive-docspace-backend:${PRODUCT_VERSION}
     depends_on:
       - postgres
+      - redis
     environment:
       - BASE_URL=${BACKEND_URL}
       - FRONTEND_URL=${FRONTEND_URL}
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres/${POSTGRES_DB}
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
       - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
+      - SPRING_DATA_REDIS_HOST=redis
+      - SPRING_DATA_REDIS_PORT=6379
       - PIPEDRIVE_CLIENT_ID=${PIPEDRIVE_CLIENT_ID}
       - PIPEDRIVE_CLIENT_SECRET=${PIPEDRIVE_CLIENT_SECRET}
     stdin_open: true
@@ -41,3 +44,9 @@ services:
     stdin_open: true
     ports:
       - "5432:5432"
+
+  redis:
+    image: redis:7.0.12
+    stdin_open: true
+    ports:
+      - "6379:6379"
