--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
       - SPRING_DATA_REDIS_HOST=redis
       - SPRING_DATA_REDIS_PORT=6379
+      - SPRING_DATA_REDIS_USERNAME=${REDIS_USERNAME}
+      - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
+      - SPRING_DATA_REDIS_DATABASE=${REDIS_DB}
       - PIPEDRIVE_CLIENT_ID=${PIPEDRIVE_CLIENT_ID}
       - PIPEDRIVE_CLIENT_SECRET=${PIPEDRIVE_CLIENT_SECRET}
     stdin_open: true
