--- a/frontend/package.json
+++ b/frontend/package.json
@@ -97,7 +97,6 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.26.0",
-    "react-tabs": "^6.0.2"
+    "react-router-dom": "^6.26.0"
   }
 }
