--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,7 +77,7 @@
     "ts-jest": "^29.2.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
+    "typescript": "5.5.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
