build: "@onlyoffice/docspace-sdk-js": "^2.0.0"

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,6 +85,7 @@
   },
   "dependencies": {
     "@onlyoffice/docspace-react": "^2.1.0",
+    "@onlyoffice/docspace-sdk-js": "^2.0.0",
     "@pipedrive/app-extensions-sdk": "^0.10.2",
     "axios": "^1.7.3",
     "axios-retry": "^4.5.0",
