--- a/frontend/package.json
+++ b/frontend/package.json
@@ -95,6 +95,7 @@
     "i18next-chained-backend": "^4.6.2",
     "i18next-http-backend": "^2.5.2",
     "i18next-localstorage-backend": "^4.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
