--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -26,6 +26,8 @@ spring:
           pipedrive:
             authorization-uri: https://oauth.pipedrive.com/oauth/authorize
             token-uri: https://oauth.pipedrive.com/oauth/token
+            user-info-uri: https://api.pipedrive.com/v1/users/me
+            user-name-attribute: data
     jwt:
       client-name-attribute: companyId
       user-name-attribute: userId
