--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       target: backend
-    image: onlyoffice/pipedrive-docspace-backend:${PRODUCT_VERSION}
+    image: docker.onlyoffice.com/pipedrive-docspace-backend:${PRODUCT_VERSION}
     depends_on:
       - postgres
       - redis
@@ -32,7 +32,7 @@ services:
       target: frontend
       args:
         - BACKEND_URL=${BACKEND_URL}
-    image: onlyoffice/pipedrive-docspace-frontend:${PRODUCT_VERSION}
+    image: docker.onlyoffice.com/pipedrive-docspace-frontend:${PRODUCT_VERSION}
     stdin_open: true
     ports:
       - "3000:80"
